# caldata-ddrc-pipelines

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: cleanup-dev-env.yml  cleanup-tests.yml  docs.yml  nb_testing_pipeline.yml  nightly.yml  pipeline.yml  pre-commit.yml  slack_bot_script.sh  tests.yml
dbt_docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
dbt_docs/compiled/caldata_ddrc_pipelines/models/marts/airtable/: airtable__most_recent_metrics.sql
dbt_docs/compiled/caldata_ddrc_pipelines/models/marts/permitting/: malibu_permitting_metrics.sql  (+1 more)
docs/: index.md  setup.md
jobs/: __init__.py  create_stored_procedures.py  load_agol_sources.py  load_la_fire_assessment.py  load_malibu_permitting.py  send_la_fire_assessment_email_report.py
jobs/utils/: geo.py  snowflake.py
search/: search_index.json
setup/: index.html
terraform/environments/dev/: .terraform.lock.hcl  doe-ddrc-dev.tfbackend  main.tf  terraform.tfvars
terraform/environments/prd/: doe-ddrc-prd.tfbackend  main.tf  terraform.tfvars
terraform/modules/s3-marts/: iam.tf  main.tf  outputs.tf  s3.tf  snowflake.tf  variables.tf
transform/: README.md  dbt_project.yml
transform/ci/: profiles.yml
transform/macros/: _macros.yml  is_non_floating_point.sql  is_over_threshold.sql  is_positive_or_zero.sql  is_under_threshold.sql  test_is_non_floating_point.sql  test_is_positive.sql  test_is_under_threshold.sql  unload_ddrc_metrics.sql
transform/models/: _sources.yml  overview.md
transform/models/marts/: _epa.yml  public_status_by_land_use_and_fire_name_counted.sql
transform/models/marts/airtable/: _airtable.yml  airtable__most_recent_metrics.sql
transform/models/marts/epa/: _epa.yml
transform/models/marts/permitting/: _permitting.yml  malibu_permitting_metrics.sql  pasadena_permitting_metrics.sql
transform/models/marts/summary/: _summary.yml  ddrc_metrics_summary.sql
transform/models/marts/usace/: _usace.yml  usace__dashboard_metrics.sql
transform/models/staging/: stg_epa__public_status_assessment.sql
transform/models/staging/airtable/: _airtable.yml  stg_airtable__metrics.sql
transform/models/staging/epa/: _epa.yml  stg_epa__public_status_assessment.sql
transform/models/staging/malibu/: _malibu.yml  stg_malibu__fire_rebuild_points.sql  stg_malibu__palisades_permits_issued_read.sql
transform/models/staging/pasadena/: _pasadena.yml  stg_pasadena__eaton_fire_rebuild_permits.sql
transform/models/staging/usace/: _usace.yml  stg_usace__parcel_debris_removal.sql
writing-documentation/: index.html
(+27 files in other folders)
