[tool.poetry]
name = "caldata-ddrc-pipelines"
version = "0.1.0"
description = "\"CalData Digital Disaster Recovery Center Data Pipelines\""
authors = ["CalData Data Operations and Engineering <ian.rose@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "~9.1.3"
dbt-core = "~1.8.0"
dbt-snowflake = "~1.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
sqlfluff = "~3.1.0"
sqlfluff-templater-dbt = "~3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
