[tool.poetry]
name = "caldata-ddrc-pipelines"
version = "0.1.0"
description = "\"CalData Digital Disaster Recovery Center Data Pipelines\""
authors = ["CalData Data Operations and Engineering <ian.rose@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
mkdocs-material = "~9.1.3"
dbt-core = "~1.9.0"
dbt-snowflake = "~1.9.0"
snowflake-connector-python = {"version"="~3.13", "extras"=["pandas"]}
snowflake-snowpark-python = "~1.27"
geopandas = "~1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
sqlfluff = "~3.1.0"
sqlfluff-templater-dbt = "~3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
allow_untyped_decorators = true # would love to enable this, but airflow decorators are untyped
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true

