[project]
name = "caldata-ddrc-pipelines"
version = "0.1.0"
description = "CalData Digital Disaster Recovery Center Data Pipelines"
authors = ["CalData Data Operations and Engineering <ian.rose@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "backoff>=2.2.1",
    "dbt-core~=1.10",
    "dbt-snowflake~=1.10",
    "geopandas~=1.0",
    "mkdocs-material~=9.6.14",
    "snowflake-connector-python[pandas]>=3.16.0",
    "snowflake-snowpark-python>=1.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "sqlfluff>=3.4.1",
    "sqlfluff-templater-dbt>=3.4.1",
]

[tool.mypy]
python_version = "3.10"
allow_untyped_decorators = true # would love to enable this, but airflow decorators are untyped
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_unreachable = true
